# face-recognition

./: .gitignore  CMakeLists.txt  README.md  face_train.cpp  manifest.json
src/: face_train.cpp  facerec_video.cpp
